# rust_calculator_cli

./: Cargo.toml  Readme.md  calulcator_cli.toml  test.txt
src/: main.rs
