[package]
name = "calculator-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
confy = "0.6.1"
crossbeam-channel = "0.5.13"
ctrlc = "3.4.5"
indicatif = "0.17.8"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
signal-hook = "0.3.17"
